mejora en la forma de considerar el estado de los issues

--- a/github-scrum-burndown-chart.ipynb
+++ b/github-scrum-burndown-chart.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sprint_issues = repo.get_issues(milestone=sprint_milestone)\n",
+    "sprint_issues = repo.get_issues(milestone=sprint_milestone, state='all')\n",
     "print(\"issues\", sprint_issues.totalCount)"
    ]
   },
